
message RespTouchMessage{
	required int32 code = 1;
	optional string msg = 2;
}
